force-app/main/default/objects/FEC_Service_Resource_Absence__c/FEC_Service_Resource_Absence__c.object-meta.xml
<CustomObject>
    <label>Service Resource Absence</label>
    <nameField>
        <displayFormat>OFF-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Resource Absences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>