force-app/main/default/objects/FEC_Service_Resource_Absence__c/fields/FEC_Absence_Period__c.field-meta.xml
<CustomField>
    <fullName>FEC_Absence_Period__c</fullName>
    <label>Absence Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Full Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>