force-app/main/default/objects/FEC_Service_Resource_Absence__c/fields/FEC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_End_Date__c</fullName>
    <description>Ngày kết thúc áp dụng lịch nghỉ</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>