force-app/main/default/objects/FEC_Service_Resource_Absence__c/fields/FEC_Note__c.field-meta.xml
<CustomField>
    <fullName>FEC_Note__c</fullName>
    <description>Thêm ghi chú (nếu có)</description>
    <label>Note</label>
    <type>TextArea</type>
</CustomField>