force-app/main/default/objects/FEC_Service_Resource_Absence__c/fields/FEC_Select_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Select_Date__c</fullName>
    <label>Select Date</label>
    <type>Date</type>
</CustomField>