force-app/main/default/objects/FEC_Service_Resource_Absence__c/fields/FEC_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>FEC_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tên của Agent đang thêm lịch nghỉ</description>
    <label>Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Service Resource Absences</relationshipLabel>
    <relationshipName>Service_Resource_Absences</relationshipName>
    <type>Lookup</type>
</CustomField>