force-app/main/default/objects/FEC_Service_Resource_Absence__c/fields/FEC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Start_Date__c</fullName>
    <description>Ngày bắt đầu áp dụng lịch nghỉ</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>