force-app/main/default/objects/FEC_Service_Resource_Absence__c/fields/FEC_Start_On__c.field-meta.xml
<CustomField>
    <fullName>FEC_Start_On__c</fullName>
    <label>Start On</label>
    <type>DateTime</type>
</CustomField>