force-app/main/default/objects/FEC_Service_Resource_Absence__c/fields/FEC_Year__c.field-meta.xml
<CustomField>
    <fullName>FEC_Year__c</fullName>
    <label>Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>