force-app/main/default/objects/FEC_Service_Resource_Absence__c/validationRules/FEC_EndDate_Greater_Than_StartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_EndDate_Greater_Than_StartDate</fullName>
    <active>true</active>
    <description>Noti-01 mapping for end date lower than start date</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(FEC_Start_Date__c)),
NOT(ISBLANK(FEC_End_Date__c)),
FEC_End_Date__c &lt; FEC_Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>FEC_End_Date__c</errorDisplayField>
    <errorMessage>Review the following fields
End Date</errorMessage>
</ValidationRule>