force-app/main/default/objects/FEC_Service_Resource_Absence__c/validationRules/FEC_StartDate_Not_In_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>FEC_StartDate_Not_In_Past</fullName>
    <active>true</active>
    <description>Noti-01 mapping for start date</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(FEC_Start_Date__c)),
FEC_Start_Date__c &lt; NOW()
)</errorConditionFormula>
    <errorDisplayField>FEC_Start_Date__c</errorDisplayField>
    <errorMessage>Review the following fields
Start Date</errorMessage>
</ValidationRule>